@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-14T01:53:36Z",
-  "count_outdated" : 163,
-  "uniques_outdated" : 27,
+  "timestamp" : "2022-04-14T08:26:45Z",
+  "count_outdated" : 164,
+  "uniques_outdated" : 28,
   "count" : 181,
   "uniques" : 35,
   "views" : [
-    {
-      "timestamp": "2022-03-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 2,
