@@ -1,12 +1,7 @@
 {
-  "count": 18,
+  "count": 17,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-03-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 2,
