@@ -1,3 +1,9 @@
+2022-04-14T08:26:45Z:
+* notice: last 14d: all unq: 17 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 163 27 / 181 35
+* notice: next accum: outdated-all outdated-unq / all unq: 164 28 / 181 35
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-14T01:53:36Z:
 * notice: last 14d: all unq: 18 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 162 26 / 180 34
